# MicrotonalStepSequencer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/sequence/: generate.hpp  measure.hpp  midi.hpp  modify.hpp  pattern.hpp  random.hpp  scale.hpp  sequence.hpp  time_signature.hpp  timing.hpp  tuning.hpp  utility.hpp
src/: generate.cpp  measure.cpp  midi.cpp  modify.cpp  pattern.cpp  time_signature.cpp  timing.cpp  tuning.cpp
test/: 12-edo.scl  catch.main.cpp  helper.hpp  measure.test.cpp  midi.test.cpp  modify.test.cpp  pattern.test.cpp  test.cpp
